--- a/ProjectRegistroPonto/nbproject/project.properties
+++ b/ProjectRegistroPonto/nbproject/project.properties
@@ -62,7 +62,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=br.com.registro.view.Principal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
@@ -79,5 +79,6 @@ run.test.classpath=\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+src.img.dir=img
 src.Instrucao.dir=Instrucao
 test.src.dir=test
