--- a/ProjectRegistroPonto/nbproject/project.properties
+++ b/ProjectRegistroPonto/nbproject/project.properties
@@ -37,7 +37,8 @@ javac.classpath=\
     ${libs.hibernate4-persistence.classpath}:\
     ${libs.hibernate4-support.classpath}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
