--- a/ProjectRegistroPonto/nbproject/project.properties
+++ b/ProjectRegistroPonto/nbproject/project.properties
@@ -61,7 +61,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=br.com.registro.view.Principal
+main.class=br.com.registro.view.TelaPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
