--- a/ProjectRegistroPonto/nbproject/project.properties
+++ b/ProjectRegistroPonto/nbproject/project.properties
@@ -30,9 +30,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.1383067774_iReport-5.5.0-plugin.zip=C:\\Users\\user_mw\\Documents\\Softwares\\Ferramentas de programa\u00e7\u00e3o\\Java\\Bibliotecas\\1383067774_iReport-5.5.0-plugin.zip
+file.reference.AbsoluteLayout.jar=lib\\AbsoluteLayout.jar
+file.reference.com-jaspersoft-ireport-components.jar=C:\\Users\\user_mw\\AppData\\Roaming\\NetBeans\\8.2\\modules\\com-jaspersoft-ireport-components.jar
+file.reference.com-jaspersoft-ireport-jasperserver.jar=C:\\Users\\user_mw\\AppData\\Roaming\\NetBeans\\8.2\\modules\\com-jaspersoft-ireport-jasperserver.jar
+file.reference.com-jaspersoft-ireport.jar=C:\\Users\\user_mw\\AppData\\Roaming\\NetBeans\\8.2\\modules\\com-jaspersoft-ireport.jar
+file.reference.com-jaspersoft-jrx.jar=C:\\Users\\user_mw\\AppData\\Roaming\\NetBeans\\8.2\\modules\\com-jaspersoft-jrx.jar
+file.reference.iText-2.1.7.js2.jar=C:\\Users\\user_mw\\AppData\\Roaming\\NetBeans\\8.2\\modules\\ext\\iText-2.1.7.js2.jar
+file.reference.jasperreports-5.5.0.jar=C:\\Users\\user_mw\\AppData\\Roaming\\NetBeans\\8.2\\modules\\ext\\jasperreports-5.5.0.jar
 file.reference.jcalendar-1.3.3.jar=lib\\jcalendar-1.3.3.jar
 file.reference.joda-time-2.9.9.jar=C:\\Users\\user_mw\\Documents\\NetBeansProjects\\Git\\trabalho\\joda-time-2.9.9.jar
-file.reference.ProjectRegistroPonto-lib=../../../ProjectRegistroPonto/ProjectRegistroPonto/lib
+file.reference.mysql-connector-java-5.1.42-bin.jar=lib/mysql-connector-java-5.1.42-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -40,9 +47,17 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.PluginJasper.classpath}:\
     ${file.reference.joda-time-2.9.9.jar}:\
-    ${file.reference.1383067774_iReport-5.5.0-plugin.zip}
+    ${file.reference.1383067774_iReport-5.5.0-plugin.zip}:\
+    ${libs.JasperReport.classpath}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.com-jaspersoft-ireport-components.jar}:\
+    ${file.reference.com-jaspersoft-ireport-jasperserver.jar}:\
+    ${file.reference.com-jaspersoft-ireport.jar}:\
+    ${file.reference.com-jaspersoft-jrx.jar}:\
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-5.5.0.jar}:\
+    ${file.reference.mysql-connector-java-5.1.42-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -85,5 +100,5 @@ run.test.classpath=\
 source.encoding=UTF-8
 src.dir=src
 src.Instrucao.dir=Instrucao
-src.lib.dir=${file.reference.ProjectRegistroPonto-lib}
+src.lib.dir=lib
 test.src.dir=test
