--- a/ProjectRegistroPonto/nbproject/project.properties
+++ b/ProjectRegistroPonto/nbproject/project.properties
@@ -29,7 +29,10 @@ dist.jar=${dist.dir}/ProjectRegistroPonto.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.1383067774_iReport-5.5.0-plugin.zip=C:\\Users\\user_mw\\Documents\\Softwares\\Ferramentas de programa\u00e7\u00e3o\\Java\\Bibliotecas\\1383067774_iReport-5.5.0-plugin.zip
 file.reference.jcalendar-1.3.3.jar=lib\\jcalendar-1.3.3.jar
+file.reference.joda-time-2.9.9.jar=C:\\Users\\user_mw\\Documents\\NetBeansProjects\\Git\\trabalho\\joda-time-2.9.9.jar
+file.reference.ProjectRegistroPonto-lib=../../../ProjectRegistroPonto/ProjectRegistroPonto/lib
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -37,7 +40,9 @@ javac.classpath=\
     ${libs.hibernate4-support.classpath}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${libs.MySQLDriver.classpath}:\
-    ${libs.PluginJasper.classpath}
+    ${libs.PluginJasper.classpath}:\
+    ${file.reference.joda-time-2.9.9.jar}:\
+    ${file.reference.1383067774_iReport-5.5.0-plugin.zip}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -80,4 +85,5 @@ run.test.classpath=\
 source.encoding=UTF-8
 src.dir=src
 src.Instrucao.dir=Instrucao
+src.lib.dir=${file.reference.ProjectRegistroPonto-lib}
 test.src.dir=test
